--- a/index.html
+++ b/index.html
@@ -1,39 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-<style>
-  body {
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-  }
-</style>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Content Example</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Top 5 (Lately)</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      font-weight: bold;
+      margin: 0;
+      padding: 20px;
+      background-color: #f9f9f9;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1em;
+      margin-bottom: 20px;
+    }
+
+    .iframe-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+
+    iframe {
+      width: 90%;
+      max-width: 600px;
+      height: 152px;
+      border-radius: 12px;
+      border: none;
+    }
+
+    .tenor-gif-embed {
+      margin: 0 auto;
+      max-width: 400px;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5em;
+      }
+
+      iframe {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
 
-    <h1>MY TOP 5 (lately)</h1>
+  <h1>MY TOP 5 (lately)</h1>
+  <p>Ordered by my playtime</p>
 
-    <p>order it based on my playtime</p>
+  <div class="iframe-container">
+    <iframe src="https://open.spotify.com/embed/track/4oy8ASvud3H7E3JuMMGZ0F?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe src="https://open.spotify.com/embed/track/2nopDUxom21JoMzFXj9wS0?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe src="https://open.spotify.com/embed/track/1rKQjUhF9zFJmuUotr3VkV?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe src="https://open.spotify.com/embed/track/5PclMa9Pxs1OFWSAS6Nid9?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  </div>
 
- <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/4oy8ASvud3H7E3JuMMGZ0F?utm_source=generator" width="70%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/2nopDUxom21JoMzFXj9wS0?utm_source=generator" width="70%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/1rKQjUhF9zFJmuUotr3VkV?utm_source=generator" width="70%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/track/5PclMa9Pxs1OFWSAS6Nid9?utm_source=generator" width="70%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-
-<div class="tenor-gif-embed" data-postid="7569054144688646875" data-share-aspect="true" data-width="40%" data-alt="Olivia Wilde Nodding GIF" data-media-id="7569054144688646875" data-show-via-tenor="true" data-expand="true">
+  <div class="tenor-gif-embed" data-postid="7569054144688646875" data-share-aspect="true" data-width="100%" data-alt="Olivia Wilde Nodding GIF" data-media-id="7569054144688646875" data-show-via-tenor="true" data-expand="true">
     <a href="https://tenor.com/view/olivia-wilde-nodding-gif-7569054144688646875">Olivia Wilde Nodding GIF</a> from <a href="https://tenor.com/search/olivia+wilde-gifs">Olivia Wilde GIFs</a>
-</div>
-<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  </div>
+  <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
-
-    <p>tuvalu.</p>
+  <p>tuvalu.</p>
 
 </body>
 </html>
