--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
     <iframe src="https://open.spotify.com/embed/track/5PclMa9Pxs1OFWSAS6Nid9?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
 
+  <h1>New Candidates</h1>
+  <p>okay, i see you<p>
+    <div class="iframe-container">
+    <iframe src="https://open.spotify.com/embed/track/3L9KMc8ImDXgDYKwdqq01V?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe src="https://open.spotify.com/embed/track/37UCSVSqiPGdR1DijOFyYY?utm_source=generator" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
   <div class="tenor-gif-embed" data-postid="7569054144688646875" data-share-aspect="true" data-width="100%" data-alt="Olivia Wilde Nodding GIF" data-media-id="7569054144688646875" data-show-via-tenor="true" data-expand="true">
     <a href="https://tenor.com/view/olivia-wilde-nodding-gif-7569054144688646875">Olivia Wilde Nodding GIF</a> from <a href="https://tenor.com/search/olivia+wilde-gifs">Olivia Wilde GIFs</a>
   </div>
@@ -78,5 +84,6 @@
 
 </body>
 </html>
+
 
 
